  28 August 2014
Tested json.c. Now correctly handles \uXXXX and control characters.
The latter inspired by 
http://www.bennadel.com/blog/2576-testing-which-ascii-characters-break-json-javascript-object-notation-parsing.htm
TODO 8232 (Line Separator) 8233 (Paragraph Separator) are also control characters, but not catched in json.c

   6 August 2014
Better handling of SGML (<?...>) and XML (<?...?>) processing instructions

  18 June 2014
New case conversion based on UnicodeData.txt 10-03-2014 18:20:00 

  10 June 2014
casesensitivehash: explicit cast to signed char.

  22 May 2014
img^jpg:(img^jpg)^?n failed, while img+jpg:(img+jpg)^?n succeeded. Now they both succeed.

  16 May 2014
1\La+1\Lb crashed due to stack overflow. Test ~1 in f5 solves the problem.

   6 May 2014
Increased a buffer size to solve segmentation fault problem with 64-bit
version when evaluating roots of some big numbers, for example
10090000004431^1/2

   3 May 2014
a^(b+c+d+e)*f^(g+h):?*?^(%+[<3)*? failed to succeed. If the first found
sublist (b+c+d+e in this example) failed to match the pattern, other sublists
where not tried.

   22 April 2014
(xml.c) The &&; sequence to escape & is no good, because &amp;&amp;; after a
full round trip ends up as & using this scheme. Decide to use the DEL character
(ASCII 127) instead and see whether that goes.. This character is forbidden or
discouraged in HTML  and XML So &blah; becomes DEL&blah; and DEL becomes 
DELDEL.

   19 April 2014
(xml.c) Unknown entity references are escaped by replacing the '&' at the start
by '&&;'. So "&surrogate-blocks;" becomes "&&;surrogate-blocks;". When writing
back to mark-up, all '&' must be converted to &amp;, except the seqences '&&;',
which must be converted to '&'.

   17 April 2014
In HTML (not XHTML), the script and style elements have cdata, not parsing the
<![CDATA[  ]]> tag that may be present for compatibility with XHTML.
The cdata of scipt and style elements ends at the first occurrence of the